# Control_of_Magnetic_Soft_Rod

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  dampingForce.cpp  dampingForce.h  elasticBendingForce.cpp  elasticRod.cpp  elasticRod.h  elasticStretchingForce.cpp  externalContactForce.cpp  externalContactForce.h  externalMagneticForce.cpp  externalMagneticForce.h  main.cpp  main.py  option.txt  setInput.cpp  setInput.h  simDER  timeStepper.cpp  timeStepper.h  world.cpp  world.h
datafiles/: simDER_rodLength_1.000000_Ba_0.000000.txt
miscellaneous/: Commands.txt  Makefile_Sample  showData.py
src/: main.cpp  world.h
src/rod_mechanics/control_forces/: externalMagneticForce.cpp  externalMagneticForce.h
src/rod_mechanics/external_forces/: dampingForce.cpp  dampingForce.h  externalContactForce.h  externalGravityForce.h
src/rod_mechanics/inner_forces/: elasticBendingForce.h  elasticStretchingForce.h  elasticTwistingForce.cpp  elasticTwistingForce.h  inertialForce.h
src/time_steppers/: timeStepper.h
